Release notes: Fix spacing between items.

--- a/assets/less/pages/release-notes.less
+++ b/assets/less/pages/release-notes.less
@@ -29,9 +29,9 @@
   .note-container {
     display: grid;
     grid-template-columns: 7rem 2fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     align-items: start;
-    //margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
   }
 
 
